# ProtLoc-mex1

./: README.md  pyproject.toml  setup.py  自我介绍.docx
Case1/Classification and feature filtering module/: case1_model_demo.py  demo_dataframe.csv
Case2/Classification and feature filtering module/: case2_model_demo.py
Case2/Loc-filter/code/: Case2.R
Case2/case2-Loc-filter/code/: type分类(膜蛋白分类).R
Case2/case2-Loc-filter/output/: human_case1.xlsx
Supplementary_material/: Supplementary S1.docx  Table S10.xlsx  Table S3.xlsx  Table S4.xlsx  Table S8.xlsx  Table S9.xlsx
