[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protloc_mex1"
version = "0.0.3"
authors = [
  { name="Ze Yu Luo", email="1024226968@qq.com" },
]
description = "..."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
        "biopython~=1.79",
        "numpy>=1.20.3",
        "pandas>=1.4.1",
        "seaborn>=0.11.2",
        "matplotlib>=3.5.1",
        "shap~=0.41.0",
]

[project.urls]
"Homepage" = "https://github.com/yujuan-zhang/ProtLoc-mexl"
"Bug Tracker" = "https://github.com/yujuan-zhang/ProtLoc-mexl/issues"

